1999-08-24  Larry Jones  <larry.jones@sdrc.com>

	* commit.c (check_fileproc): Don't crash when a file has no
	repository, just treat it as unknown.  (Reported by Stefaan
	Diericx <stefaan.diericx@argenta.be>.)
	* sanity.sh (errmsg2): New tests, for this fix.

1999-08-18  Larry Jones  <larry.jones@sdrc.com>

	* update.c (special_file_mismatch): Initialize *_hardlinks to
	avoid trying to free garbage later on.  (Reported by Jan
	Scheffczyk <herta@Xterminator.StudFB.UniBw-Muenchen.de>.)

1999-08-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (basicc-11): Older versions of sh don't understand
	``if ! test...''.  (Patch submitted by David J N Begley
	<david@avarice.nepean.uws.edu.au>.)

1999-08-17  Larry Jones  <larry.jones@sdrc.com>

	* client.c, hardlink.c, hash.c, hash.h, main.c, recurse.c: Change
	enum constant UNKNOWN to avoid conflicts on HPUX 11.0.  (Reported
	by Laurent Duperval <laurent.duperval@cgi.ca>.)

1999-08-16  Larry Jones  <larry.jones@sdrc.com>

	client.c: Eliminate redundant #if.  (Patch submitted by Assar
	Westerlund <assar@sics.se>.)
  
1999-07-30  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_checkin): Terminate cleanly if RCS_addbranch fails
	rather than blithely continuing on and crashing.
	* sanity.sh (basica): New tests, for this fix.

1999-07-29  Larry Jones  <larry.jones@sdrc.com>

	* import.c (add_rcs_file): change "cannot lstat" message to include
	userfile (the actual file causing the problem) instead of user
	(which may or may not be the same).

1999-07-28  Eric Sink   <eric@sourcegear.com>

	* sanity.sh: before running basicc-11, we need to see if
	the cwd has been deleted (by basicc-8).  If so, we
	recreate it to allow basicc-11 to proceed.  This may be
	something that only happens under the Linux 2.2 kernel.

1999-07-18  Karl Fogel  <kfogel@floss.red-bean.com>

	* edit.c (notify_do): chop newline, if any, from the value
	obtained from CVSROOT/users.  Otherwise it just gets passed along